// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`puts the cursor in sensible places 1`] = `
Object {
  "formatted": "return <|>15;
",
  "original": "return        <|> 15",
}
`;

exports[`puts the cursor in sensible places 2`] = `
Object {
  "formatted": "return <|>15;
",
  "original": "return        <|>15",
}
`;

exports[`puts the cursor in sensible places 3`] = `
Object {
  "formatted": "foo<|>(bar);
",
  "original": "
foo  <|>  (bar);  
",
}
`;

exports[`puts the cursor in sensible places 4`] = `
Object {
  "formatted": "<|>const y = 5;
",
  "original": " 

  <|>  
    

  const y = 5
",
}
`;

exports[`puts the cursor in sensible places 5`] = `
Object {
  "formatted": "const y = 5;

<|>const z = 9;
",
  "original": " 

  const y = 5

     
  
  <|>  
    


  const z = 9
",
}
`;

exports[`puts the cursor in sensible places 6`] = `
Object {
  "formatted": "const y = 5;
<|>
const z = 9;
",
  "original": "const y = 5
<|>



const z = 9
",
}
`;

exports[`puts the cursor in sensible places 7`] = `
Object {
  "formatted": "func<|>tion banana() {}
",
  "original": "  func<|>tion banana(){}",
}
`;

exports[`puts the cursor in sensible places 8`] = `
Object {
  "formatted": "thisWillBeFormatted<|>(2, 3);
",
  "original": "     thisWillBeFormatted  <|>  (2  ,3,   )",
}
`;

exports[`works when the file starts with a comment 1`] = `
Object {
  "formatted": "// hi<|> lol
haha();
",
  "original": " 
    // hi<|> lol
    haha() 
",
}
`;

exports[`works when the file starts with a comment 2`] = `
Object {
  "formatted": "// hi lol
haha()<|>;
",
  "original": " 
    // hi lol
    haha()<|>
",
}
`;

exports[`works with ranges 1`] = `
Object {
  "formatted": "thisWontBeFormatted  ( 1  ,3)
    
    thisWillBeFormatted<|>(2, 3);
    
    thisWontBeFormatted  (2, 90  ,)
    ",
  "original": "thisWontBeFormatted  ( 1  ,3)
    
    thisWillBeFormatted  <|>  (2  ,3,   )
    
    thisWontBeFormatted  (2, 90  ,)
    ",
}
`;

exports[`works with ranges 2`] = `
Object {
  "formatted": "thisWontBeFormatted  ( 1  ,3)
    
    thisWillBeFormatted(2, 3<|>);
    
    thisWontBeFormatted  (2, 90  ,)
    ",
  "original": "thisWontBeFormatted  ( 1  ,3)
    
    thisWillBeFormatted    (2  ,3<|>,   )
    
    thisWontBeFormatted  (2, 90  ,)
    ",
}
`;

exports[`works with ranges 3`] = `
Object {
  "formatted": "thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted(2, 3<|>);

    thisWontBeFormatted(2, 90);
    ",
  "original": "thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted    (2  ,3,  <|> )
    
    thisWontBeFormatted  (2, 90  ,)
    ",
}
`;

exports[`works with ranges 4`] = `
Object {
  "formatted": "thisWontBeFormatted <|> ( 1  ,3)
    
    thisWillBeFormatted(2, 3);
    
    thisWontBeFormatted  (2, 90  ,)
    ",
  "original": "thisWontBeFormatted <|> ( 1  ,3)
    
    thisWillBeFormatted    (2  ,3,   )
    
    thisWontBeFormatted  (2, 90  ,)
    ",
}
`;

exports[`works with ranges 5`] = `
Object {
  "formatted": "thisWontBeFormatted  ( 1  ,3)
    
    thisWillBeFormatted(2, 3);
    
    thisWontBeFormatted  (2, 9<|>0  ,)
    ",
  "original": "thisWontBeFormatted  ( 1  ,3)
    
    thisWillBeFormatted    (2  ,3,   )
    
    thisWontBeFormatted  (2, 9<|>0  ,)
    ",
}
`;
